--- a/bin/dune
+++ b/bin/dune
@@ -1,5 +1,5 @@
 (executable
  (public_name ocaml_compiler)
- (name minifun)
+ (name minityfun)
  (libraries ocaml_compiler base stdio)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord)))
