--- a/bin/dune
+++ b/bin/dune
@@ -1,5 +1,5 @@
-(executable
- (public_name ocaml_compiler)
- (name minityfun)
- (libraries ocaml_compiler base stdio)
+(executables
+ (public_names MiniTyFun MiniFun MiniFunExec MiniImpExec)
+ (names minityfun MiniFun MiniFunExec MiniImpExec)
+ (libraries MiniLang base stdio)
  (preprocess (pps ppx_deriving.show ppx_deriving.ord)))
