--- a/lib/dune
+++ b/lib/dune
@@ -5,4 +5,4 @@
 (library
  (name MiniLang)
  (preprocess(pps ppx_deriving.show))
- (modules MiniFunLexer MiniFunParser MiniFun MiniImp MiniImpParser MiniImpLexer))
+ (modules MiniFunLexer MiniFunParser MiniFun MiniImp MiniImpParser MiniImpLexer MiniImpControlFlow))
