changes: - fixed bug in minimp cfg - fixed bug in risc cfg - added live range optimization

--- a/lib/dune
+++ b/lib/dune
@@ -5,4 +5,8 @@
 (library
  (name MiniLang)
  (preprocess(pps ppx_deriving.show))
- (modules MiniFunLexer MiniFunParser MiniFun MiniImp MiniImpParser MiniImpLexer GenericCFG MiniImpControlFlow MiniRISC MiniRISCControlFlowGraph CFGDataFlowAnalysis DefinedVariablesAnalysis LiveVariableAnalysis))
+ (modules MiniFunLexer MiniFunParser MiniFun MiniImp MiniImpParser MiniImpLexer 
+ GenericCFG MiniImpControlFlow MiniRISC MiniRISCControlFlowGraph 
+ CFGDataFlowAnalysis DefinedVariablesAnalysis LiveVariableAnalysis
+ LiveRangeOptimization
+ ))
