changes: - added Register Allocator - remove in and out from live range optimization - fixed edge case bug in live variable analysis - added print mapping in minirisc print utils - added undefined variable looker method - TODO: translate virtual registers to phyisical ones and perform testing

--- a/lib/dune
+++ b/lib/dune
@@ -8,5 +8,5 @@
  (modules MiniFunLexer MiniFunParser MiniFun MiniImp MiniImpParser MiniImpLexer 
  GenericCFG MiniImpControlFlow MiniRISC MiniRISCControlFlowGraph 
  CFGDataFlowAnalysis DefinedVariablesAnalysis LiveVariableAnalysis
- LiveRangeOptimization
+ LiveRangeOptimization RegisterAllocator
  ))
